    - add --ignore-etag to force reload even if we have a cached version
  * softwarecenter/db/update.py:
    - do not fail if "MimeType" is missing from a desktop file
  * softwarecenter/apt/apthistory.py:
    - use python-apt tagfile parser instead of python-debian
  * debian/control:
    - drop python-debian dependency
  * test/test_gui_buy_something.py: 
    - run test with --ignore-etag

  [ Martin Pitt ]
  * debian/rules: Supply dh --with option after $@, for compatibility with
    current debhelper.
  * debian/rules: Build with scour for SVG optimization. Add python-scour
    build dependency.

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Nov 2010 16:06:18 +0100

software-center (3.1.0) natty; urgency=low

  [ Michael Vogt ]
  * softwarecenter/app.py:
    - use "reopen" instead of "open" in the channels-changed 
      callback to ensure that the various views get the right
      signal. This partly fixes #507836, the exceptions will
      stil be there, but the UI will fully recover
  * softwarecenter/backend/aptd.py:
    - do not emit "channels-changed" while installing a purchase,
      this emited already by the update()
  * softwarecenter/db/application.py:
    - if appdetails finds its pkgname in the pending transactions
      but does not have a apt pkg object yet, this means it got
      installed from a newly enabled source, return the right state
      in this case
  * softwarecenter/view/appdetailsview_gtk.py:
    - remove explicit "progress.set_fraction()" in configure() because
      its not needed (gtk.ProgressBar will DTRT) and also we may get
      "xapian reopen" signals in the middle of a transaction, in this
      case we don't want to reset the progress. 
  * merged lp:~mvo/software-center/zeitgeist-magic-seif that brings
    basic zeitgeist integration. Many thanks to Seif Lotfy for the
    work on this!
  * merged lp:~mmcg069/software-center/usage-bubble, that makes the 
    usage counter look so much nicer :)