@@ -46,6 +46,8 @@ software-center (3.1.1) natty; urgency=low
     - drop python-debian dependency
   * test/test_gui_buy_something.py: 
     - run test with --ignore-etag
+  * softwarecenter/apt/aptcache.py, test/test_addons.py:
+    - make the addons test more robust
 
   [ Martin Pitt ]
   * debian/rules: Supply dh --with option after $@, for compatibility with
@@ -53,7 +55,7 @@ software-center (3.1.1) natty; urgency=low
   * debian/rules: Build with scour for SVG optimization. Add python-scour
     build dependency.
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Nov 2010 16:06:18 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Nov 2010 16:57:47 +0100
 
 software-center (3.1.0) natty; urgency=low
 
